Fix: tech 창 overflow시 scroll

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,4 +7,14 @@
 body {
   background-color: rgb(27, 27, 30);
   color: white;
+
+  ::-webkit-scrollbar {
+    background-color: transparent;
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 50px;
+  }
 }
